--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://koukyosyumei.github.io/KoukyosyumeiResume/" 
+baseURL: "https://koukyosyumei.github.io/KoukyosyumeiResume2/" 
 title: Hideaki Takahashi
 paginate: 20
 theme: PaperMod
