--- a/config.yml
+++ b/config.yml
@@ -73,12 +73,14 @@ params:
               date: "Apr. 2019 ~ Mar. 2024"
               description: "Major GPA 3.91/4.0 (Overall: 3.83/4.0)"
           publications:
-            - title: "Breaching FedMD, Image Recovery via Paired-Logits Inversion Attack. Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition"
+            - title: "Breaching FedMD, Image Recovery via Paired-Logits Inversion Attack."
               url: https://arxiv.org/pdf/2304.11436.pdf
               authors: "Hideaki Takahashi, Jingjing Liu, and Yang Liu."
+              publisher: "Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition"
               date: "2023"
-            - title: "On the Transit Obfuscation Problem. International Foundation for Autonomous Agents and Multiagent Systems"
+            - title: "On the Transit Obfuscation Problem."
               authors: "Hideaki Takahashi, Alex Fukunaga"
+              publisher: "International Foundation for Autonomous Agents and Multiagent Systems"
               date: "2024"
           preprints:
             - title: "VFLAIR, A Research Library and Benchmark for Vertical Federated Learning. arXiv:2310.09827"
