--- a/config.yml
+++ b/config.yml
@@ -76,11 +76,11 @@ params:
             - title: "Breaching FedMD, Image Recovery via Paired-Logits Inversion Attack."
               url: https://arxiv.org/pdf/2304.11436.pdf
               authors: "Hideaki Takahashi, Jingjing Liu, and Yang Liu."
-              publisher: "Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition"
+              publisher: "Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (accepted rate: 25.8%)"
               date: "2023"
             - title: "On the Transit Obfuscation Problem."
               authors: "Hideaki Takahashi, Alex Fukunaga"
-              publisher: "International Foundation for Autonomous Agents and Multiagent Systems"
+              publisher: "International Foundation for Autonomous Agents and Multiagent Systems (accepted rate: 25.9%)"
               date: "2024"
           preprints:
             - title: "VFLAIR, A Research Library and Benchmark for Vertical Federated Learning. arXiv:2310.09827"
