--- a/config.yml
+++ b/config.yml
@@ -80,7 +80,7 @@ params:
               date: "2023"
             - title: "On the Transit Obfuscation Problem."
               authors: "Hideaki Takahashi, Alex Fukunaga"
-              publisher: "International Conference on Autonomous Agents and Multi-Agent Systems (accepted rate: 25.9%)"
+              publisher: "Proceedings of the International Conference on Autonomous Agents and Multi-Agent Systems (accepted rate: 25.9%)"
               date: "2024"
           preprints:
             - title: "VFLAIR, A Research Library and Benchmark for Vertical Federated Learning. arXiv:2310.09827"
