--- a/config.yml
+++ b/config.yml
@@ -81,7 +81,7 @@ params:
               publisher: "Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (acceptance rate: 25.8%)"
               date: "2023"
             - title: "On the Transit Obfuscation Problem."
-              authors: "Hideaki Takahashi, Alex Fukunaga"
+              authors: "<u>Hideaki Takahashi</u>, Alex Fukunaga"
               publisher: "Proceedings of the International Conference on Autonomous Agents and Multi-Agent Systems (acceptance rate: 25.9%)"
               date: "2024"
           preprints:
