--- a/config.yml
+++ b/config.yml
@@ -78,17 +78,18 @@ params:
             - title: "Breaching FedMD, Image Recovery via Paired-Logits Inversion Attack."
               url: https://arxiv.org/pdf/2304.11436.pdf
               authors: "Hideaki Takahashi*, Jingjing Liu, and Yang Liu."
-              publisher: "Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (acceptance rate: 25.8%)"
+              publisher: "Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition"
               date: "2023"
             - title: "On the Transit Obfuscation Problem."
               authors: "Hideaki Takahashi*, Alex Fukunaga"
-              publisher: "Proceedings of the International Conference on Autonomous Agents and Multi-Agent Systems (acceptance rate: 25.9%)"
+              publisher: "Proceedings of the International Conference on Autonomous Agents and Multi-Agent Systems"
               date: "2024"
-          preprints:
-            - title: "VFLAIR, A Research Library and Benchmark for Vertical Federated Learning. arXiv:2310.09827"
+            - title: "VFLAIR, A Research Library and Benchmark for Vertical Federated Learning."
               url: https://arxiv.org/abs/2310.09827
               authors: "Zou, Tianyuan, Zixuan Gu, Yuanqin He, Hideaki Takahashi*, Yang Liu, Guangnan Ye and Ya-Qin Zhang"
-              date: "2023"
+              publisher: "Proceedings of the International Conference on Learning Representations"
+              date: "2024"
+          preprints:
             - title: "Eliminating Label Leakage in Tree‑based Vertical Federated Learning. arXiv:2307.10318"
               url: https://arxiv.org/pdf/2307.10318.pdf
               authors: "Hideaki Takahashi*, Jingjing Liu, and Yang Liu"
