--- a/config.yml
+++ b/config.yml
@@ -78,16 +78,16 @@ params:
             - title: "Breaching FedMD, Image Recovery via Paired-Logits Inversion Attack."
               url: https://arxiv.org/pdf/2304.11436.pdf
               authors: "Hideaki Takahashi*, Jingjing Liu, and Yang Liu."
-              publisher: "Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition"
+              publisher: "Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)"
               date: "2023"
             - title: "On the Transit Obfuscation Problem."
               authors: "Hideaki Takahashi*, Alex Fukunaga"
-              publisher: "Proceedings of the International Conference on Autonomous Agents and Multi-Agent Systems"
+              publisher: "Proceedings of the International Conference on Autonomous Agents and Multi-Agent Systems (AAMAS)"
               date: "2024"
             - title: "VFLAIR, A Research Library and Benchmark for Vertical Federated Learning."
               url: https://arxiv.org/abs/2310.09827
               authors: "Zou, Tianyuan, Zixuan Gu, Yuanqin He, Hideaki Takahashi*, Yang Liu, Guangnan Ye and Ya-Qin Zhang"
-              publisher: "Proceedings of the International Conference on Learning Representations"
+              publisher: "Proceedings of the International Conference on Learning Representations (ICLR)"
               date: "2024"
           preprints:
             - title: "Eliminating Label Leakage in Tree‑based Vertical Federated Learning. arXiv:2307.10318"
