--- a/config.yml
+++ b/config.yml
@@ -86,7 +86,7 @@ params:
               date: "2024"
             - title: "VFLAIR, A Research Library and Benchmark for Vertical Federated Learning."
               url: https://arxiv.org/abs/2310.09827
-              authors: "Zou, Tianyuan, Zixuan Gu, Yuanqin He, Hideaki Takahashi*, Yang Liu, Guangnan Ye and Ya-Qin Zhang"
+              authors: "Zou, Tianyuan, Zixuan Gu, Yuanqin He, Hideaki Takahashi, Yang Liu, Guangnan Ye and Ya-Qin Zhang"
               publisher: "Proceedings of the International Conference on Learning Representations (ICLR)"
               date: "2024"
           preprints:
