--- a/config.yml
+++ b/config.yml
@@ -76,18 +76,21 @@ params:
               description: "Major GPA 3.91/4.0 (Overall: 3.83/4.0)"
           publications:
             - title: "Breaching FedMD, Image Recovery via Paired-Logits Inversion Attack."
+              venue: "CVPR'23"
               url: https://arxiv.org/pdf/2304.11436.pdf
               authors: "Hideaki Takahashi*, Jingjing Liu, and Yang Liu."
-              publisher: "Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)"
+              publisher: "Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition"
               date: "2023"
             - title: "On the Transit Obfuscation Problem."
+              venue: "AAMAS'24"
               authors: "Hideaki Takahashi*, Alex Fukunaga"
-              publisher: "Proceedings of the International Conference on Autonomous Agents and Multi-Agent Systems (AAMAS)"
+              publisher: "Proceedings of the International Conference on Autonomous Agents and Multi-Agent Systems"
               date: "2024"
             - title: "VFLAIR, A Research Library and Benchmark for Vertical Federated Learning."
+              venue: "ICLR'24"
               url: https://arxiv.org/abs/2310.09827
               authors: "Zou, Tianyuan, Zixuan Gu, Yuanqin He, Hideaki Takahashi, Yang Liu, Guangnan Ye and Ya-Qin Zhang"
-              publisher: "Proceedings of the International Conference on Learning Representations (ICLR)"
+              publisher: "Proceedings of the International Conference on Learning Representations"
               date: "2024"
           preprints:
             - title: "Eliminating Label Leakage in Tree‑based Vertical Federated Learning. arXiv:2307.10318"
