--- a/config.yml
+++ b/config.yml
@@ -117,7 +117,7 @@ params:
             - title: Institute for AI Industry Research, Tsinghua University
               role: Federated Learning & Privacy Computing Intern
               date: "Jan. 2022 ‑ Feb. 2023"
-              description: "Conducted research on federated learning and privacy computing under the supervision of <a href='https://sites.google.com/site/yangliuveronica/'>Prof. Yang Liu</a> and <a href='https://0-scholar-google-com.brum.beds.ac.uk/citations?user=BzJ_GboAAAAJ'>Prof. Jingjing Liu</a>."  
+              description: "Conducted research on federated learning and privacy computing under the supervision of Prof. Yang Liu and Prof. Jingjing Liu."  
             - title: Nara Institute of Science and Technology
               role: Visiting Student
               date: "Aug. 2021 ‑ Sep. 2021" 
