--- a/config.yml
+++ b/config.yml
@@ -143,22 +143,27 @@ params:
           honor:
             - title: "Kaggle, Google - Fast or Slow? Predict AI Model Runtime"
               date: 2023
+              url: https://www.kaggle.com/competitions/predict-ai-model-runtime
               result: "45th/616 teams (silver medal)" 
               description: "Compiler Optimization, Automated Algorithmic Configuration"  
             - title: "Kaggle, Hungry Geese"
               date: 2021
+              url: https://www.kaggle.com/competitions/hungry-geese
               result: "67th/875 teams (bronze medal)"
               description: "AI Agent, Reinforcement Learning"  
             - title: "Kaggle, Santa 2020"
               date: 2021
+              url: https://www.kaggle.com/competitions/santa-2020
               result: "52nd/788 teams (bronze medal)"
               description: "AI Agent, Reinforcement Learning, Multi-Armed Bandit"  
             - title: "Kaggle, Google Research Football with Manchester City F.C."
               date: 2020
+              url: https://www.kaggle.com/c/google-football
               result: "51st/1138 teams (silver medal)"
               description: "AI Agent, Reinforcement Learning"  
             - title: "Kaggle, Cornell Birdcall Identification"
               date: 2020
+              url: https://www.kaggle.com/c/birdsong-recognition
               result: "88th/1390 teams (bronze medal)"
               description: "Audio Classification, Signal Processing"  
 
