--- a/config.yml
+++ b/config.yml
@@ -124,7 +124,7 @@ params:
               description: "Conducted research on the free‑rider problem of federated learning under the supervision of Prof. Kohei Ichikawa and Prof. Keichi Takahashi."  
           industry:
             - title: Apple Inc.
-              role: Technical Internship: AIML / Software Engineer
+              role: "Technical Internship: AIML/Software Engineer"
               date: "Feb. 2024 - present"
               description: "Working on the development of tools for qualifying Siri features."
             - title: UTokyo Economic Consulting Inc.
