--- a/config.yml
+++ b/config.yml
@@ -127,7 +127,7 @@ params:
             - title: Apple Inc.
               role: "Technical Internship: AIML/Software Engineer"
               date: "Feb. 2024 - present"
-              description: "Working on the development of tools for qualifying Siri features."
+              description: "Working on Siri featurs."
             - title: UTokyo Economic Consulting Inc.
               role: Research Assistant
               date: "Oct. 2020 - present"
