--- a/config.yml
+++ b/config.yml
@@ -117,9 +117,9 @@ params:
             - title: My*
               description: This series aims to implement various algorithms and solvers from scratch.
               subprojects:
-                  - title: MyCompiler
-                      url: "https://github.com/Koukyosyumei/MyCompiler"
-                      description: Toy compiler from a simple language to LLVM-IR implemented from scratch in Haskell
+                  - stitle: MyCompiler
+                      surl: "https://github.com/Koukyosyumei/MyCompiler"
+                      sdescription: Toy compiler from a simple language to LLVM-IR implemented from scratch in Haskell
           research:
             - title: Institute for AI Industry Research, Tsinghua University
               role: Federated Learning & Privacy Computing Intern
