--- a/config.yml
+++ b/config.yml
@@ -114,7 +114,7 @@ params:
               badges:
                   - url: "https://badgen.net/github/stars/Koukyosyumei/Gymbo?color=green"                
               description: Gymbo is a Proof of Concept for a Gradient-based Symbolic Execution Engine implemented from scratch. Building on recent advancements that utilize gradient descent to solve SMT formulas, Gymbo leverages gradient descent to discover input values that fulfill each path constraint during symbolic execution.  
-            - title: My*
+            - title: My
               description: This series aims to implement various algorithms and solvers from scratch.
               subprojects:
                   - stitle: MyCompiler
