--- a/config.yml
+++ b/config.yml
@@ -115,14 +115,17 @@ params:
                   - url: "https://badgen.net/github/stars/Koukyosyumei/Gymbo?color=green"                
               description: Gymbo is a Proof of Concept for a Gradient-based Symbolic Execution Engine implemented from scratch. Building on recent advancements that utilize gradient descent to solve SMT formulas, Gymbo leverages gradient descent to discover input values that fulfill each path constraint during symbolic execution.  
             - title: "My*"
-              description: This series aims to implement various algorithms and solvers from scratch.
+              description: This series aims to implement various algorithms, compiliers and solvers from scratch.
               subprojects:
                   - title: MyCompiler
                     url: https://github.com/Koukyosyumei/MyCompiler
                     description: Toy compiler from a simple language to LLVM-IR implemented from scratch in Haskell.
                   - title: MyPlanner
                     url: https://github.com/Koukyosyumei/MyPlanner
-                    description: PDDL Solver implemented in C++ from scratch.  
+                    description: PDDL Solver implemented in C++ from scratch.
+                  - title: MyOptimizer
+                    url: https://github.com/Koukyosyumei/MyOptimizer
+                    description: Implementations of popular optimization and search algorithms.  
           research:
             - title: Institute for AI Industry Research, Tsinghua University
               role: Federated Learning & Privacy Computing Intern
