--- a/config.yml
+++ b/config.yml
@@ -25,7 +25,7 @@ menu:
             #weight: 4
 
 params:
-    description: "I’m a 4th-year undergrad at the University of Tokyo, majoring in Informatics. My main interests lie at the intersection of AI, security, privacy, and system technologies."
+    description: "I’m an incoming Ph.D. student. I received a Bachelor of Arts and Science at the University of Tokyo in 2024, majoring in Informatics. My main interests lie at the intersection of AI, security, privacy, and system technologies."
     author: Hideaki Takahashi
     # googleAnalyticsID: "G-XXXXX"
     DateFormat: "Nov. 2023"
@@ -50,7 +50,7 @@ params:
     profileMode:
           enabled: true
           title: Hideaki Takahashi
-          subtitle: "I am a 4th-year undergrad at the University of Tokyo, majoring in Informatics. I am fortunate to be supervised by <u><a href='http://www.metahack.org/'>Prof. Alex Fukunaga</a></u>. My main interests lie at the intersection of AI, security, privacy, and systems. I’ve gained research experience in privacy-preserving machine learning, secure planning, distributed systems, and HPC. Some of my first-authored papers were accepted during my undergrad at top conferences like CVPR and AAMAS. My OSS project, “AIJack,” which offers attack, defense, and debugging tools for ML, has also gained over 200 stars on GitHub."
+          subtitle: "Hi, everyone; I'm a recent graduate from the University of Tokyo with a Bachelor of Arts and Science in Informatics (class of 2024). I had the privilege of working under <u><a href='http://www.metahack.org/'>Prof. Alex Fukunaga</a></u>, whose guidance was invaluable. My research interests lie at the exciting intersection of AI, security, privacy, and systems. During my undergrad, I was fortunate to have some of my first-authored papers accepted at top conferences like CVPR and AAMAS. I'm also passionate about open-source development, and my project 'AIJack' - a toolkit for attacking, defending, and debugging machine learning models - has gained over 300 stars on GitHub!"
           imageUrl: "newface.jpg"
           imageWidth: 160
           imageHeight: 160
