--- a/config.yml
+++ b/config.yml
@@ -131,7 +131,7 @@ params:
               role: Federated Learning & Privacy Computing Intern
               date: "Jan. 2022 ‑ Feb. 2023"
               description: "Conducted research on federated learning and privacy computing under the supervision of Prof. Yang Liu and Prof. Jingjing Liu."  
-            - title: Nara Institute of Science and Technology
+            - title: Laboratory for Software Design and Analyis, Nara Institute of Science and Technology
               role: Visiting Student
               date: "Aug. 2021 ‑ Sep. 2021" 
               description: "Conducted research on the free‑rider problem of federated learning under the supervision of Prof. Kohei Ichikawa and Prof. Keichi Takahashi."  
