--- a/config.yml
+++ b/config.yml
@@ -50,7 +50,7 @@ params:
     profileMode:
           enabled: true
           title: Hideaki Takahashi
-          subtitle: "<u><a href='https://koukyosyumei.github.io/KoukyosyumeiResume/jp/'>日本語版はこちら</a></u><br/><br/>Hello everyone,<br/>I recently graduated from the University of Tokyo with a Bachelor of Arts and Science in Informatics (class of 2024). My research interests revolve around AI, security, privacy, and systems.<br/><br/>During my undergraduate studies, I was fortunate to work under <u><a href='http://www.metahack.org/'>Prof. Alex Fukunaga</a></u>, focusing on theoretical aspects of privacy-preserving path planning. I successfully published my senior thesis at AAMAS. Additionally, I spent a gap year as a research intern at Tsinghua University under the supervision of <u><a href='https://sites.google.com/site/yangliuveronica/home'>Prof. Yang Liu</a></u> and <u><a href='https://scholar.google.com/citations?user=BzJ_GboAAAAJ'>Prof. Jingjing Liu</a></u>, investigating privacy vulnerabilities in Federated Learning, resulting in a first-authored CVPR paper.<br/><br/>I am also passionate about open-source development. My project, AIJack, which aims to attack, defend, and debug machine learning models, has gained traction with over 300 stars on GitHub and has been widely used in research."
+          subtitle: "<u><a href='https://koukyosyumei.github.io/KoukyosyumeiResume/jp/'>日本語版はこちら</a></u><br/><br/>Hello everyone,<br/>I recently graduated from the University of Tokyo with a Bachelor of Arts and Science in Informatics (class of 2024). My research interests revolve around AI, security, privacy, and systems.<br/><br/>During my undergraduate studies, I was fortunate to work under <u><a href='http://www.metahack.org/'>Prof. Alex Fukunaga</a></u>, focusing on theoretical aspects of privacy-preserving path planning. Additionally, I spent a gap year as a research intern at Tsinghua University under the supervision of <u><a href='https://sites.google.com/site/yangliuveronica/home'>Prof. Yang Liu</a></u> and <u><a href='https://scholar.google.com/citations?user=BzJ_GboAAAAJ'>Prof. Jingjing Liu</a></u>, investigating privacy vulnerabilities in Federated Learning.<br/><br/>I am also passionate about open-source development. My project, AIJack, which aims to attack, defend, and debug machine learning models, has gained traction with over 300 stars on GitHub and has been widely used in research."
           imageUrl: "newface.jpg"
           imageWidth: 160
           imageHeight: 160
@@ -130,6 +130,9 @@ params:
                     url: https://github.com/Koukyosyumei/MyOptimizer
                     description: Implementations of popular optimization and search algorithms.  
           research:
+            - title: Fukunaga Lab, The University of Tokyo
+              data: "Apr. 2023 - Mar. 2023"
+              description: "Conducted research on the transit obfuscation problem, which is a new task of privacy-preserving AI planing, under the supervision of Prof. Alex Fukunaga."
             - title: Institute for AI Industry Research, Tsinghua University
               role: Federated Learning & Privacy Computing Intern
               date: "Jan. 2022 ‑ Feb. 2023"
